--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -21,8 +21,8 @@
     \item Sucrose (table sugar) is glucose plus fructose. Glucose tastes slightly less sweet, and fructose tastes a whole lot sweeter.
     \item We now consume 120 pounds of sugar per person per year, different from 20 pounds per person per year in 1976 and 1 pound per person per year in older times.
     \begin{itemize}
-        \item So we have developed artificial sweeteners that cut calories, such as saccharin, aspartame, and sucralose.
-        \item Sucralose is thermally stable (you can bake with it), has no chloric content, and is made from sugar by protecting some alcohols and replacing others with chlorines.
+        \item So we have developed artificial sweeteners that cut calories, such as saccharin, aspartame, and sucralose (more on these third quarter).
+        \item Sucralose is thermally stable (you can bake with it), has no caloric content, and is made from sugar by protecting some alcohols and replacing others with chlorines.
     \end{itemize}
     \item Capsaicin (spiciness) evolved to prevent bugs from biting their host plants.
     \begin{itemize}
@@ -58,10 +58,10 @@
     \end{itemize}
     \item Fleming and penicillin.
     \begin{itemize}
-        \item Initially we have no idea what its structure is.
+        \item Initially, we have no idea what its structure is.
         \item It's hard to synthesize something if we have no idea what it is.
-        \item During WWII, American and Britain embark on a campaign to synthesize penicillin equal in scope to the Manhatten project, but it wasn't successful.
-        \item Eventually, Dorthy Crowfoot Hodgkin gets its structure with x-ray crystallography, after wrong attempts from R. B. Woodward and Sir Robert Robinson (future Nobel laureates who hated each other).
+        \item During WWII, America and Britain embark on a campaign to synthesize penicillin equal in scope to the Manhattan project, but it wasn't successful.
+        \item Eventually, Dorthy Crowfoot Hodgkin gets its structure with X-ray crystallography, after wrong attempts from R. B. Woodward and Sir Robert Robinson (future Nobel laureates who hated each other).
         \item The moldy cantaloupe.
         \item In 1955, John Sheehan at MIT comes up with the first chemical reagent capable of synthesizing penicillin's 4-membered ring.
         \item But we made too many antibiotics and antibiotic resistance developed.
@@ -107,13 +107,13 @@
             \caption{Mirror plane in hexane.}
             \label{fig:hexaneMirrorPlane}
         \end{figure}
-        \item No symmetry, such as in 1-bromo-2,5-dichloro-3,4,6-trimethylbenzene, means all (nine) distinct signals.
+        \item No symmetry, such as in 1-bromo-2,5-dichloro-3,4,6-trimethylbenzene, means all distinct signals (nine total).
         \item Local symmetry (think an isopropyl group).
         \begin{itemize}
             \item Look for branch points.
             \item You must have consistency of structure for the entirety of branches.
         \end{itemize}
-        \item para-dibromobenzene has only 2 signals since it has \emph{two} mirror planes.
+        \item \emph{para}-dibromobenzene has only 2 signals since it has \emph{two} mirror planes.
     \end{itemize}
 \end{itemize}
 
@@ -159,7 +159,7 @@
     \item Any nucleus that has an odd atomic number will have a dipole moment.
     \begin{itemize}
         \item The four most significant ones for organic chemistry are \ce{{}^1H}, \ce{{}^13C}, \ce{{}^15N}, and \ce{{}^17O}.
-        \item The last three are all not commonly occurring isotopes. Oxygen, especially, can barely be measured. Hydrogen will be the most useful because \ce{{}^1H} is the most commonly occurring isotope.
+        \item The last three are all not commonly occurring isotopes. Oxygen, especially, can barely be measured. Hydrogen will be the most useful because \ce{{}^1H} is its most commonly occurring isotope.
         \item For \ce{{}^13C}, we will need a longer experiment since only 1/1000 carbon atoms is \ce{{}^13C}.
     \end{itemize}
     \item Theory-lite for NMR.
