--- a/Notes/Week2/week2.tex
+++ b/Notes/Week2/week2.tex
@@ -251,7 +251,7 @@
         \item Notice how in Figure \ref{fig:pascala}, a less sensitive instrument displays peak overlapping and thus an additive rule works, while in Figure \ref{fig:pascalb}, a more sensitive instrument resolves individual peaks.
         \item Dr. Snyder always wants us to use the multiplicative rule on homeworks and tests.
     \end{itemize}
-    \item Reconstructs meta-bromomethylbenzene from its NMR spectrum.
+    \item Reconstructs \emph{meta}-bromomethylbenzene from its NMR spectrum.
     \item How spectroscopy is used in modern research.
     \begin{itemize}
         \item X-ray crystallography was the first type of spectroscopy on the scene, being able to identify the position of every atom save hydrogen. Yet it was restricted to crystalline solids.
@@ -274,7 +274,7 @@
     \begin{itemize}
         \item Tighter bonds vibrate faster (e.g., $\ce{C#C}>\ce{C=C}>\ce{C-C}$).
         \item Bonds that are more polar also have higher wave numbers.
-        \item Esters usually have higher carbonyl stretches than ketones.
+        \item Esters usually have higher carbonyl stretches than ketones (inductive electron withdrawal is more important than resonance).
         \item Putting a double bond next to a ketone lowers it's stretching frequency due to resonance detracting from the double bond character of the \ce{C=O} bond.
         \item Sometimes you can tell benzene because it has a smaller \ce{C-H} peak.
         \item Hydroxyl groups in alcohols, carboxylic acids, and phenols have different peaks, properties, and reactivity.
@@ -310,7 +310,7 @@
             }
     
             \small
-            \node [rotate=90,above=7mm] at (10,50) {Relative Ion Abundance};
+            \node [rotate=90] at (5.3,50) {Relative Ion Abundance};
             \node [below=5mm] at (30,0) {$m/z$};
     
             \footnotesize
@@ -511,6 +511,7 @@
                 \arrow{0}[,0]\+
                 \chemfig{\charge{0=\.}{R}}
             \schemestop
+            \chemnameinit{}
             \chemmove{
                 \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon,swap,flex]}] (sb2) to[bend right=60,looseness=1.5] (R2);
                 \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon,swap]}] (sb2) to[bend left=50,looseness=1.3] (db2);
@@ -534,10 +535,11 @@
                     \arrow{->[ionization][-$\e[-]$]}[,1.4]
                     \chemfig{**6(---(-CH_3)---)}
                     \arrow{->[\shortstack{fragmentation and\\rearrangement}][-\ce{H*}]}[,2.2]
-                    \chemname[-3.5em]{
+                    \chemname{
                         \chemfig{[:-12.86]*7(-=-=-@{C3}-=)}
                     }{Tropylium ion}
                 \schemestop
+                \chemnameinit{}
                 \chemmove{
                     \node at (cyclecenter2) {\tiny$+$\hspace{0.6pt}\tikz[baseline={(0,-0.04)}]{\filldraw circle (0.15ex);}};
                     \node [below] at (C3) {\tiny$+$};
