--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -237,7 +237,7 @@
     \end{itemize}
     \item \ce{HBr} addition to alkenes.
     \begin{itemize}
-        \item The hydrohalogenation mechanism produces the Markovnikov product.
+        \item The hydrohalogenation mechanism (see Figure 6.1 of \textcite{bib:CHEM22000Notes}) produces the Markovnikov product.
         \item Morris Kharasch at UChicago in 1933 proposed that a radical mechanism produced the anti-Markovnikov product.
         \begin{itemize}
             \item In particular, when run in the presence of air at low temperatures, organic peroxides are formed; these molecules allow the reaction to proceed.
@@ -355,7 +355,7 @@
     \item Bromination and allylic/benzylic halogenation have broad synthetic utility.
     \item Chlorination, less so.
     \begin{itemize}
-        \item Polychlorination happens because the product is even more reactive than the starting material --- a radical at the $\alpha$ carbon gains extra stability from the nearby EWG (chlorine).
+        \item Polychlorination happens because the product is even more reactive than the starting material --- a radical at the $\alpha$ carbon gains extra stability from the nearby strong EWG (chlorine).
     \end{itemize}
     \item \ce{Br*} reacts with a hydrogen in propene in allylic halogenation, but adds into the alkene in non-Markovnokov addition of \ce{HBr} to an alkene.
     \begin{itemize}
@@ -486,7 +486,7 @@
         \begin{itemize}
             \item Forming \ce{HCl} \emph{releases} $\SI[per-mode=symbol]{103}{\kilo\calorie\per\mole}$, and thus is exothermic.
             \item Forming \ce{HBr} \emph{requires} $\SI[per-mode=symbol]{87}{\kilo\calorie\per\mole}$, and thus is endothermic.
-            \item By Hammond's postulate, the transition state in bromination of alkanes (Figure \ref{fig:rxnDiagramAlkaneHalogenationb}) more closely resembles the products, while the transition state in chlorination of alkanes (Figure \ref{fig:rxnDiagramAlkaneHalogenationa}) more closely resembles the reactants.
+            \item By \textbf{Hammond's postulate}, the transition state in bromination of alkanes (Figure \ref{fig:rxnDiagramAlkaneHalogenationb}) more closely resembles the products, while the transition state in chlorination of alkanes (Figure \ref{fig:rxnDiagramAlkaneHalogenationa}) more closely resembles the reactants.
             \item Thus, the transition states in the two bromination reactions, already more energetically separated than their chlorination cousins, are more sensitive to which type of radical is formed than the transition states in the two chlorination reactions.
         \end{itemize}
     \end{itemize}
@@ -513,7 +513,7 @@
         \label{fig:dielsAlderGeneral}
     \end{figure}
     \begin{itemize}
-        \item Combines a diene (a $4\pi$-electron component) and a dienophile (a $2\pi$-electron component).
+        \item Combines a diene (a 4-$\pi$ electron component) and a dienophile (a 2-$\pi$ electron component).
         \item The real power of this reaction is not the synthesis of the ring, but the ability to synthesize chiral centers and put subsituents where you want in a way that is predictable and controllable.
         \item Can build a second double bond into the product.
         \item Can run this intermolecularly or intramolecularly.
@@ -635,12 +635,12 @@
                 \label{fig:dielsAlderEWG}
             \end{figure}
             \begin{itemize}
-                \item These all have a $\pi$-system directly attached to your double bond, and electronegativity pulls electrons out towards these $\pi$-systems.
+                \item These all directly attach an external $\pi$ system to your double bond, and electronegativity pulls electron density out toward these external $\pi$ systems.
             \end{itemize}
         \end{itemize}
     \end{enumerate}
-    \item \textbf{S-cis}: Alkenes are cis relative to the sigma bond.
-    \item \textbf{S-trans}: Alkenes are trans relative to the sigma bond.
+    \item \textbf{S-cis}: Alkenes are \emph{cis} relative to the $\sigma$ bond.
+    \item \textbf{S-trans}: Alkenes are \emph{trans} relative to the $\sigma$ bond.
     \item The Diels-Alder reaction is \textbf{stereospecific}.
     \begin{figure}[H]
         \centering
@@ -687,7 +687,7 @@
         \label{fig:dielsAlderStereo}
     \end{figure}
     \begin{itemize}
-        \item The reactants are not chiral, but they do have information encoded in their double bonds (e.g., (E)- vs. (Z)-substituents). This information gets translated into whether those substituents are cis or trans in the product.
+        \item The reactants are not chiral, but they do have information encoded in their double bonds (e.g., (E)- vs. (Z)-substituents). This information gets translated into whether those substituents are \emph{cis} or \emph{trans} in the product.
     \end{itemize}
     \item \textbf{Stereospecific} (reaction): A reaction in which the geometry present in the starting material translates directly into the stereochemistry of the product.
     \item The Diels-Alder reaction is \textbf{diastereoselective}.
@@ -736,15 +736,15 @@
     \end{figure}
     \begin{itemize}
         \item When we add a substituted diene to a substituted dienophile, we might intuitively think that we will form the less sterically encumbered product (via an \textbf{exo} transition state).
-        \item However, we find that in spite of the steric penalty, we form the \textbf{endo} product. This is because there is an additional stabilizing interaction present in the endo transition state that is not present in the exo transition state, namely the one between the $\pi$-orbitals of the EWG and the bond that will be an alkene in the product (this interaction is shown in light blue in Figure \ref{fig:dielsAlderDiastereo}).
+        \item However, we find that in spite of the steric penalty, we form the \textbf{endo} product. This is because there is an additional stabilizing interaction present in the endo transition state that is not present in the exo transition state, namely the one between the $\pi$ orbitals of the EWG and the bond that will be an alkene in the product (this interaction is shown in light blue in Figure \ref{fig:dielsAlderDiastereo}).
         \item Note that since it is equally likely that the dienophile will attack the diene from the top (as in Figure \ref{fig:dielsAlderDiastereo}) and from the bottom, both enantiomers of the endo product will be formed.
         \begin{itemize}
             \item To indicate this on a test question, write $(+/-)$ next to your answer!
         \end{itemize}
     \end{itemize}
     \item \textbf{Diastereoselective} (reaction): A reaction in which only one of two possible diastereomers is formed in those cases where two or more stereogenic centers are created.
-    \item \textbf{Endo} (transition state): A transition state in which bulky groups EWGs on the dienophile lie below the dienophile.
-    \item \textbf{Exo} (transition state): A transition state in which bulky groups EWGs on the dienophile lie away from the dienophile.
+    \item \textbf{Endo} (transition state): A transition state in which bulky groups EWGs on the dienophile lie below the diene.
+    \item \textbf{Exo} (transition state): A transition state in which bulky groups EWGs on the dienophile lie away from the diene.
     \item Reviews kinetic vs. thermodynamic product.
     \begin{itemize}
         \item The endo product is more easily formed (it's the kinetic product), and the exo product is usually more stable (it's the thermodynamic product).
@@ -793,9 +793,9 @@
     \begin{itemize}
         \item If both reactants are substituted and we draw their resonance states (see Figures \ref{fig:dielsAlderEDG} and \ref{fig:dielsAlderEWG}), we'd like to unite the carbon that is negative and the carbon that is positive.
         \item This resonance analysis is not really what happens (all electrons move at once as in Figure \ref{fig:mechanismDielsAlder}), but it is quite predictive.
-        \item Note that we can have a diene with an EDG at one end, a diene with an EDG in the interior, or a diene with meta EDGs (a so-called \textbf{synergistic eiene} because both EDGs push electrons toward the carbon at the end adjacent to the interior EDG).
+        \item Note that we can have a diene with an EDG at one end, a diene with an EDG in the interior, or a diene with \emph{meta} EDGs (a so-called \textbf{synergistic diene} because both EDGs push electrons toward the carbon at the end adjacent to the interior EDG).
     \end{itemize}
-    \item Does a number of examples.
+    \item Snyder does a number of examples.
     \item When facing a Diels-Alder question on a PSet or test, your first question to ask is "are my reactants appropriate for the Diels-Alder reaction?"
     \begin{itemize}
         \item If not, just write "N.R." for "no reaction."
@@ -841,6 +841,7 @@
             \+
             \chemname{\shortstack{HCl\\{\color{white}hi}}}{{\color{white}hi}\\{\color{white}hi}}
         \schemestop
+        \chemnameinit{}
         \caption{Unselectivity of chlorination of alkanes.}
         \label{fig:chlorinationUnselective}
     \end{figure}
