--- a/Notes/Week5/week5.tex
+++ b/Notes/Week5/week5.tex
@@ -94,7 +94,7 @@
     
             \begin{scope}[yshift=3cm]
                 \draw [semithick] (7,0) -- ++(2.5,0);
-                \filldraw [semithick,fill=grx]
+                \filldraw [semithick,fill=gry]
                     (7,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
                     (7.5,0) to[out=-120,in=-60,looseness=150] ++(0.01,0)
                     (8,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
@@ -120,7 +120,7 @@
             \end{scope}
             \begin{scope}[yshift=2cm]
                 \draw [semithick] (7,0) -- ++(2.5,0);
-                \filldraw [semithick,fill=grx]
+                \filldraw [semithick,fill=gry]
                     (7,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
                     (7.5,0) to[out=-120,in=-60,looseness=150] ++(0.01,0)
                     (8,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
@@ -145,7 +145,7 @@
             \end{scope}
             \begin{scope}[yshift=1cm]
                 \draw [semithick] (7,0) -- ++(2.5,0);
-                \filldraw [semithick,fill=grx]
+                \filldraw [semithick,fill=gry]
                     (7,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
                     (7.5,0) to[out=-120,in=-60,looseness=150] ++(0.01,0)
                     (8,0)   to[out=-120,in=-60,looseness=150] ++(0.01,0)
@@ -169,7 +169,7 @@
             \end{scope}
             \begin{scope}[yshift=-1cm]
                 \draw [semithick] (7,0) -- ++(2.5,0);
-                \filldraw [semithick,fill=grx]
+                \filldraw [semithick,fill=gry]
                     (7,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
                     (7.5,0) to[out=120,in=60,looseness=150] ++(0.01,0)
                     (8,0)   to[out=-120,in=-60,looseness=150] ++(0.01,0)
@@ -192,7 +192,7 @@
             \end{scope}
             \begin{scope}[yshift=-2cm]
                 \draw [semithick] (7,0) -- ++(2.5,0);
-                \filldraw [semithick,fill=grx]
+                \filldraw [semithick,fill=gry]
                     (7,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
                     (7.5,0) to[out=120,in=60,looseness=150] ++(0.01,0)
                     (8,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
@@ -212,7 +212,7 @@
             \end{scope}
             \begin{scope}[yshift=-3cm]
                 \draw [semithick] (7,0) -- ++(2.5,0);
-                \filldraw [semithick,fill=grx]
+                \filldraw [semithick,fill=gry]
                     (7,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
                     (7.5,0) to[out=120,in=60,looseness=150] ++(0.01,0)
                     (8,0)   to[out=120,in=60,looseness=150] ++(0.01,0)
@@ -236,7 +236,7 @@
     \begin{itemize}
         \item Three are bonding; three are antibonding. We can guess at what the SALCs look like with a nodal analysis.
     \end{itemize}
-    \item For benzene, six $p$-orbitals combine to make six different MOs.
+    \item For benzene, six $p$ orbitals combine to make six different MOs.
     \begin{itemize}
         \item See Figures III.1 and III.2 in \textcite{bib:CHEM20100Notes}.
         \item For conjugated cyclic systems with an even number of atoms, there will always be a single high and single low MO energy level.
@@ -312,15 +312,15 @@
 
 \section{Aromaticity 2}
 \begin{itemize}
-    \item \marginnote{2/10:}Note that the bond lengths of benzene are equal because the two resonance structures each contribute equally, and we can measure the bond length via x-ray crystallography.
-    \item A magnetic field induces the $\pi$-electrons of aromatic compounds to circulate. This motion reinforces the magnetic field, leading to a substantial deshielding effect in NMR experiments.
+    \item \marginnote{2/10:}Note that the bond lengths of benzene are equal because the two resonance structures each contribute equally, and we can measure the bond length via X-ray crystallography.
+    \item A magnetic field induces the $\pi$ electrons of aromatic compounds to circulate. This motion reinforces the magnetic field, leading to a substantial deshielding effect in NMR experiments.
     \begin{itemize}
         \item Indeed, NMR is one of our key tools for identifying aromatic compounds.
     \end{itemize}
     \item People in the 1820s thought that a compound had to smell to be aromatic. Of course, we now know that smell has nothing to do with chemical aromaticity.
     \item \textbf{H\"{u}ckel's rules}: A set of rules that determines whether or not a compound is aromatic; a shortcut to the Frost diagram method.
     \begin{itemize}
-        \item To apply H\"{u}ckel's rule, the molecule in question must be flat, cyclic, and have a $p$-orbital on each atom.
+        \item To apply H\"{u}ckel's rule, the molecule in question must be flat, cyclic, and have a $p$ orbital on each atom.
         \item If one of these conditions does not apply, the molecule is simply non-aromatic.
         \item If the conditions do apply, $4n+2$ $\pi$ electrons implies aromaticity and $4n$ ($n\in\N$) electrons implies anti-aromaticity (the number of atoms is less than 6) or non-aromaticity (the number of atoms is greater than 6).
     \end{itemize}
@@ -337,8 +337,8 @@
     \end{itemize}
     \item Based on first principles, a structure with a ring system and a number of electrons that makes reasonable sense for aromaticity is aromatic.
     \begin{itemize}
-        \item However, in nature, 18 $\pi$-electrons tends to be the upper limit for aromaticity.
-        \item Chemists have gone up to 34 $\pi$-electrons and you can go even higher.
+        \item However, in nature, 18 $\pi$ electrons tends to be the upper limit for aromaticity.
+        \item Chemists have gone up to 34 $\pi$ electrons and you can go even higher.
         \item As long as the molecule is still flat, if everything else works, it is aromatic.
     \end{itemize}
     \item Today, we will discuss three new classes of molecules that have aromaticity.
@@ -369,9 +369,9 @@
             \label{fig:aromaticityTropylium}
         \end{figure}
     \end{itemize}
-    \item When we have substituted compounds, we only care about the $\pi$-electrons in the ring system.
+    \item When we have substituted compounds, we only care about the $\pi$ electrons in the ring system.
     \begin{itemize}
-        \item For example, in tropone, we only count seven $\pi$-electrons.
+        \item For example, in tropone, we only count seven $\pi$ electrons.
         \begin{figure}[H]
             \centering
             \footnotesize
@@ -393,7 +393,7 @@
             \item However, if a molecule can become aromatic, it will. Thus, the actual structure of tropone is the right resonance structures above.
         \end{itemize}
     \end{itemize}
-    \item We can indeed have $2\pi$-electron aromatic systems \parencite{bib:Breslow}.
+    \item We can indeed have 2-$\pi$ electron aromatic systems \parencite{bib:Breslow}.
     \begin{figure}[h!]
         \centering
         \footnotesize
@@ -520,13 +520,13 @@
         \label{fig:pyridineStructure}
     \end{figure}
     \begin{itemize}
-        \item The three double bonds in pyridine contribute the six $\pi$-electrons necessary for it to be aromatic.
+        \item The three double bonds in pyridine contribute the six $\pi$ electrons necessary for it to be aromatic.
         \item Importantly, this means that the lone pair of nitrogen is \emph{not} needed for aromaticity, so it sits outside the compound in an $sp^2$ orbital.
         \item The fact that this lone pair is free implies that pyridine is an excellent base.
     \end{itemize}
     \item An analysis of pyrrole.
     \begin{itemize}
-        \item The two double bonds \emph{plus} the lone pair of the nitrogen constitute the six $\pi$-electrons necessary for it to be aromatic.
+        \item The two double bonds \emph{plus} the lone pair of the nitrogen constitute the six $\pi$ electrons necessary for it to be aromatic.
         \begin{itemize}
             \item Although VSEPR theory suggests that the nitrogen would be $sp^3$ hybridized so as to get all electron pairs as far away as possible, the decrease in energy by rehybridizing to $sp^2$ is more than compensated for by the aromatic stabilization energy.
         \end{itemize}
@@ -538,7 +538,7 @@
         \item The two double bonds plus one of the lone pairs of the oxygen constitute the six $\pi$-electrons necessary for it to be aromatic.
         \item However, there is still a lone pair left over on the oxygen, so furan can still act like a base.
     \end{itemize}
-    \item Adenine is a heterocyclic aromatic compound with 10 $\pi$-electrons. Some of its nitrogens contribute their lone pair electrons to the $\pi$-system, and others have them free to act as bases.
+    \item Adenine is a heterocyclic aromatic compound with 10 $\pi$ electrons. Some of its nitrogens contribute their lone pair electrons to the $\pi$ system, and others have them free to act as bases.
     \item Heterocycles can be anti-aromatic as well.
     \begin{figure}[h!]
         \centering
@@ -548,8 +548,8 @@
         \label{fig:antiaromatiHeterocycle}
     \end{figure}
     \begin{itemize}
-        \item Boron is happy with three bonds, so it has an empty $p$-orbital.
-        \item Thus, this is a flat cyclic molecule with an uninterrupted chain of $p$ orbitals and $4n$ ($n=1$) $\pi$-electrons. But this implies that it is anti-aromatic.
+        \item Boron is happy with three bonds, so it has an empty $p$ orbital.
+        \item Thus, this is a flat cyclic molecule with an uninterrupted chain of $p$ orbitals and $4n$ ($n=1$) $\pi$ electrons. But this implies that it is anti-aromatic.
     \end{itemize}
     \item Degrees of aromaticity.
     \begin{itemize}
@@ -621,7 +621,7 @@
         \label{fig:naphthaleneStructure}
     \end{figure}
     \begin{itemize}
-        \item Although Figure \ref{fig:commonPAHsa} shows that naphthalene is a 10 $\pi$-electron system, it can be useful to think of it as two separate benzene rings.
+        \item Although Figure \ref{fig:commonPAHsa} shows that naphthalene is a 10-$\pi$ electron system, it can be useful to think of it as two separate benzene rings.
         \item Doing so and drawing all resonance structures reveals that each ring only appears as benzene (as opposed to a diene) $2/3$ of the time.
         \begin{itemize}
             \item Every occurrence of a ring as benzene is boxed in Figure \ref{fig:naphthaleneStructure}. Notice how each ring is boxed twice and not boxed once (across the three resonance structures).
@@ -645,9 +645,9 @@
         \label{fig:pyreneStructure}
     \end{figure}
     \begin{itemize}
-        \item Pyrene is aromatic, but it appears to have $16=4n$ $\pi$-electrons.
-        \item However, since one of the criteria for aromaticity is a \emph{cyclic} chain of $\pi$-orbitals, it is actually only the $14=4n+2$ $\pi$-electrons around the periphery that constitute the aromatic system. The $\pi$-bond in the center of the molecule is just a lone alkene with no aromatic stabilization.
-        \item You can hydrogenate the central double bond at very high pressures, but essentially for all intents and purposes, pyrene is a nonreactive molecule.
+        \item Pyrene is aromatic, but it appears to have $16=4n$ $\pi$ electrons.
+        \item However, since one of the criteria for aromaticity is a \emph{cyclic} chain of $\pi$ orbitals, it is actually only the $14=4n+2$ $\pi$ electrons around the periphery that constitute the aromatic system. The $\pi$ bond in the center of the molecule is just a lone alkene with no aromatic stabilization.
+        \item You can hydrogenate the central double bond at very high pressures, but for all intents and purposes, pyrene is an essentially nonreactive molecule.
     \end{itemize}
     \item Diels-Alder reactivity of anthracene.
     \begin{figure}[h!]
@@ -736,9 +736,9 @@
         \label{fig:specialConsiderations}
     \end{figure}
     \begin{itemize}
-        \item Triple bonds: A triple bond in the $\pi$-system still only contributes two electrons. This is because its other two $\pi$ electrons are perpendicular to the $\pi$-system in question.
+        \item Triple bonds: A triple bond in the $\pi$ system still only contributes two electrons. This is because its other two $\pi$ electrons are perpendicular to the $\pi$ system in question.
         \begin{itemize}
-            \item The compound in Figure \ref{fig:specialConsiderationsa} has 12 $\pi$-electrons but is still non-aromatic because the number of atoms is greater than six (it can bend).
+            \item The compound in Figure \ref{fig:specialConsiderationsa} has 12 $\pi$ electrons but is still non-aromatic because the number of atoms is greater than six (it can bend).
         \end{itemize}
         \item Sterics: If sterics prevent a molecule from being flat, it cannot be aromatic.
         \begin{itemize}
@@ -764,10 +764,10 @@
             \item Examples: Methylbenzene $\to$ toluene, hydroxybenzene $\to$ phenol, aminobenzene $\to$ aniline.
             \item Other compounds to be aware of: Benzenesulfonic acid (\ce{C6H5SO3H}), benzoic acid (\ce{C6H5COOH}), acetophenone (\ce{C6H5COCH3}), and anisole (\ce{C6H5OCH3}).
         \end{itemize}
-        \item Covers ortho, meta, para naming.
+        \item Covers \emph{ortho}, \emph{meta}, \emph{para} naming.
         \item "When a substituent is one that together with the benzene ring gives a new base name, that substituent is assumed to be in position 1 and the new parent name is used" \parencite[620]{bib:SolomonsEtAl}.
         \begin{itemize}
-            \item This means that molecules such as m-nitrobenzoic acid are named 3-nitrobenzoic acid.
+            \item This means that molecules such as \emph{m}-nitrobenzoic acid are named 3-nitrobenzoic acid.
         \end{itemize}
         \item Dimethylbenzenes are often known as xylenes.
         \item Phenylmethyl becomes benzyl.
@@ -790,12 +790,12 @@
     \item \textbf{Resonance energy}: The difference between the amount of heat actually released and that calculated on the basis of the Kekul\'{e} structure.
     \item "Resonance contributors, we emphasize again, are not in equilibrium. They are not structures of real molecules. They are the closest we can get if we are bound by simple rules of valence, but they are very useful in helping us visualize the actual molecule as a hybrid" \parencite[625]{bib:SolomonsEtAl}.
     \item It was recently discovered that "crystalline benzene involves perpendicular interactions between benzene rings, so that the relatively positive periphery of one molecule associates with the relatively negative faces of the benzene molecules aligned above and below it" \parencite[627]{bib:SolomonsEtAl}.
-    \item In 1931, Erich H\"{u}ckel carried out a series of quantum mechanical calculations that concluded that planar monocyclic rings containing $4n+2$ $\pi$-electrons have \textbf{closed shells} of delocalized electrons (like benzene) and therefore have substantial resonance energies.
+    \item In 1931, Erich H\"{u}ckel carried out a series of quantum mechanical calculations that concluded that planar monocyclic rings containing $4n+2$ $\pi$ electrons have \textbf{closed shells} of delocalized electrons (like benzene) and therefore have substantial resonance energies.
     \item \textbf{Closed shell}: A set of molecular orbitals that are all either completely occupied or completely empty (i.e., no MO in the set contains only one electron).
     \begin{itemize}
         \item Molecules that lack closed shells have unpaired electrons (radicals) and are usually not stable.
     \end{itemize}
-    \item The \textbf{polygon-and-circle method} was developed by C. A. Coulson of Oxford university as a simple method of deriving the same energy levels that the quantum mechanical calculations of H\"{u}ckel would furnish.
+    \item The \textbf{polygon-and-circle method} was developed by C. A. Coulson of Oxford University as a simple method of deriving the same energy levels that the quantum mechanical calculations of H\"{u}ckel would furnish.
     \item \textbf{Polygon-and-circle method}: The following procedure.
     \begin{enumerate}
         \item We start by drawing a polygon corresponding to the number of carbons in the ring, placing a corner of the polygon at the bottom.
@@ -809,7 +809,7 @@
         \item The ring size of an annulene is indicated by a number in brackets.
         \item For example, benzene is [6]annulene and cyclooctatetraene is [8]annulene.
     \end{itemize}
-    \item H\"{u}ckel's rule predicts that annulenes are aromatic iff they have $4n+2$ $\pi$-electrons.
+    \item H\"{u}ckel's rule predicts that annulenes are aromatic iff they have $4n+2$ $\pi$ electrons.
     \begin{itemize}
         \item This prediction was verified in the 1960s (largely by F. Sondheimer) as numerous new annulenes became available for testing.
         \item Annulenes 14-24 satisfy H\"{u}ckel's prediction.
@@ -818,7 +818,7 @@
     \item The \ce{{}^1H} NMR spectrum of benzene supports both equivalent hydrogens (only a singlet appears) and the cyclic nature of the $\pi$-system (the high chemical shift is indicative of a ring current).
     \begin{itemize}
         \item {}[18]annulene has six hydrogens within its ring and twelve hydrogens at the periphery. Because of the shape of the ring current, the internal hydrogens are highly shielded ($\delta\ -3.0$) and the external hydrogens are highly deshielded ($\delta\ 9.3$).
-        \item NMR spectroscopy provides direct physical evidence of whether or not the $\pi$-electrons are delocalized.
+        \item NMR spectroscopy provides direct physical evidence of whether or not the $\pi$ electrons are delocalized.
     \end{itemize}
     \item Cycloheptatriene is also commonly known as tropylidene.
     \item To evaluate the stabilization (or lack thereof) of a cyclic compound with delocalized $\pi$ electrons, we compare it to a conjugated linear model and consider what would happen (theoretically or experimentally) if we removed a hydrogen from each end of the linear compound to form a ring.
