--- a/Notes/Week6/week6.tex
+++ b/Notes/Week6/week6.tex
@@ -39,7 +39,7 @@
         \label{fig:EASmechanism}
     \end{figure}
     \begin{itemize}
-        \item To begin, one of the $\pi$-bonds of benzene attacks \ce{D+}. This causes the loss of aromaticity, but the carbocation is highly resonance delocalized.
+        \item To begin, one of the $\pi$ bonds of benzene attacks \ce{D+}. This causes the loss of aromaticity, but the carbocation is highly resonance delocalized.
         \item Although we \emph{could} make an alcohol at this point, this would lead to the loss of aromaticity in the product, so we won't do that.
         \item Instead, we do an E1-type reaction.
         \item The first step is the RDS.
@@ -113,7 +113,7 @@
     \end{equation*}
     \begin{itemize}
         \item We start with nitric acid, but as before, the nitrogen is not electrophilic enough.
-        \item Thus, we add catalytic sulfuric acid. Since \ce{H2SO4} is stronger than \ce{HNO3}, it protonates nitric acid to \ce{H2NO3+}, which quickly splits into \ce{H2O + NO2+}, where \ce{NO2+} is the nitronium ion (a super electrophile!).
+        \item Thus, we add catalytic sulfuric acid. Since \ce{H2SO4} is stronger than \ce{HNO3}, it protonates nitric acid to \ce{H2NO3+}, which quickly splits into \ce{H2O + NO2+}, where \ce{NO2+} is the \textbf{nitronium ion} (a super electrophile!).
     \end{itemize}
     \item Mechanism.
     \begin{figure}[H]
@@ -310,7 +310,7 @@
             \item EWGs (you need a nucleophilic aromatic ring as with F-C acylation).
             \item Selectivity (you get a mixture of products due to hydride/methyl shifts since the mechanism proceeds through a carbocation intermediate).
         \end{itemize}
-        \item Additional issue: Over-alkylation. The products are more reactive because the electron-donating alkyl groups increase the nucleophilicity of the aromatic ring. Thus, we get ortho- and para-dialkyl compounds in addition to the monosubstituted products.
+        \item Additional issue: Over-alkylation. The products are more reactive because the electron-donating alkyl groups increase the nucleophilicity of the aromatic ring. Thus, we get \emph{ortho}- and \emph{para}-dialkyl compounds in addition to the monosubstituted products.
         \begin{itemize}
             \item Note that this is not a problem with the other reactions we've learned so far (everything else added EWGs).
         \end{itemize}
@@ -471,13 +471,13 @@
         \item Consider nitration.
         \item Nitro groups are strongly electron withdrawing. Thus, they deactivate their host aromatic ring.
         \begin{itemize}
-            \item Over a long time, however, we will see the formation of some meta-dinitrobenzene (not ortho or para).
-            \item This is because resonance gives us carbocations at the ortho and para positions. Thus, the molecule is \num{100000} times less reactive then benzene toward EAS overall, but the molecule is even less reactive (less nucleophilic) at the ortho and para positions.
-            \item Additionally, if we substitute ortho or para, we will have a resonance structure in the transition state with a carbocation directly adjacent to the positive nitrogen of the nitro group. This is no good, and another reason why EWGs are meta-directing.
+            \item Over a long time, however, we will see the formation of some \emph{meta}-dinitrobenzene (not \emph{ortho} or \emph{para}).
+            \item This is because resonance gives us carbocations at the \emph{ortho} and \emph{para} positions. Thus, the molecule is \num{100000} times less reactive then benzene toward EAS overall, but the molecule is even less reactive (less nucleophilic) at the \emph{ortho} and \emph{para} positions.
+            \item Additionally, if we substitute \emph{ortho} or \emph{para}, we will have a resonance structure in the transition state with a carbocation directly adjacent to the positive nitrogen of the nitro group. This is no good, and another reason why EWGs are \emph{meta}-directing.
         \end{itemize}
         \item Same for acyl groups and \ce{SO3H} groups.
     \end{itemize}
-    \item With respect to ortho/para selectivity, sterics \emph{may} sometimes make ortho-substitution less likely.
+    \item With respect to \emph{ortho}/\emph{para} selectivity, sterics \emph{may} sometimes make \emph{ortho}-substitution less likely.
     \item Activators and deactivators.
     \begin{figure}[h!]
         \centering
@@ -506,23 +506,23 @@
                 (6,0.1) -- ++(0,-0.2) node[below]{\ce{NH2}}
             ;
     
-            \draw [decorate,decoration={brace,mirror}] (-9.4,-1.5) -- node[below=1mm]{m-directing} (-2.6,-1.5);
-            \draw [decorate,decoration={brace,mirror}] (-2.4,-1.5) -- node[below=1mm]{o/p-directing} (-0.6,-1.5);
-            \draw [decorate,decoration={brace,mirror}] (0.6,-1.5) -- node[below=1mm]{o/p-directing} (6.4,-1.5);
+            \draw [decorate,decoration={brace,mirror}] (-9.4,-1.5) -- node[below=1mm]{\emph{m}-directing} (-2.6,-1.5);
+            \draw [decorate,decoration={brace,mirror}] (-2.4,-1.5) -- node[below=1mm]{\emph{o}/\emph{p}-directing} (-0.6,-1.5);
+            \draw [decorate,decoration={brace,mirror}] (0.6,-1.5) -- node[below=1mm]{\emph{o}/\emph{p}-directing} (6.4,-1.5);
         \end{tikzpicture}
         \caption{Activators and deactivators.}
         \label{fig:DeActivators}
     \end{figure}
     \begin{itemize}
-        \item Deactivators are meta-directors (the meta position is the most nucleophilic position in a deactivator-substituted molecule).
-        \item Activators won't break aromaticity as in resonance structures, but said structures can indicate trends. They are ortho/para directors.
+        \item Deactivators are \emph{meta}-directors (the \emph{meta} position is the most nucleophilic position in a deactivator-substituted molecule).
+        \item Activators won't break aromaticity as in resonance structures, but said structures can indicate trends. They are \emph{ortho}/\emph{para} directors.
         \begin{itemize}
-            \item Convince yourself using resonance structures that ortho/para addition leads to 1 extra resonance structure.
+            \item Convince yourself using resonance structures that \emph{ortho}/\emph{para} addition leads to 1 extra resonance structure.
         \end{itemize}
-        \item Alkyl and aryl groups are ortho/para-directing activators.
+        \item Alkyl and aryl groups are \emph{ortho}/\emph{para}-directing activators.
         \begin{itemize}
-            \item Ortho/para addition allows us to access a resonance structure where the carbocation intermediate is tertiary.
-            \item For example, toluene is about 25 times more reactive than benzene, and it is even more reactive at the ortho/para positions.
+            \item \emph{Ortho}/\emph{para} addition allows us to access a resonance structure where the carbocation intermediate is tertiary.
+            \item For example, toluene is about 25 times more reactive than benzene, and it is even more reactive at the \emph{ortho}/\emph{para} positions.
         \end{itemize}
         \item Halogens will be discussed next week.
     \end{itemize}
@@ -561,13 +561,16 @@
         \item A mixture of an alcohol and an acid (e.g., \ce{BF3}) can also be used.
     \end{itemize}
     \item Friedel-Crafts acylation.
-    \item \textbf{Acetyl group}: The \ce{MeCO} group. \emph{Also known as} \textbf{ethanoyl group}.
-    \item \textbf{Benzoyl group}: The \ce{PhCO} group.
+    \item \textbf{Acetyl group}: The \ce{MeCO} group, bound through the \ce{C}. \emph{Also known as} \textbf{ethanoyl group}.
+    \item \textbf{Benzoyl group}: The \ce{PhCO} group, bound through the \ce{C}.
     \item \textbf{Acyl halide}. \emph{Also known as} \textbf{acid halide}.
     \item Friedel-Crafts acylations can also be carried out using carboxylic acid anhydrides.
     \item Additional limitation: "Aryl and vinylic halides cannot be used as the halide component because they do not form carbocations readily" \parencite[672]{bib:SolomonsEtAl}.
     \item Side reaction with the Clemmensen reduction: Zinc and \ce{HCl} can also reduce nitro groups to amino groups.
-    \item \textbf{Wolf-Kishner reduction}: The basic complement of the Clemmensen reduction, which hydrogenates a ketone with hydrazine (\ce{H2NNH2}), \ce{KOH}, and heat.
+    \item \textbf{Wolff-Kishner reduction}: The basic complement of the Clemmensen reduction, which hydrogenates a ketone with hydrazine (\ce{H2NNH2}), \ce{KOH}, and heat.
+    \begin{itemize}
+        \item More on this next quarter.
+    \end{itemize}
     \item \textbf{Arene}: A hydrocarbon that consists of both aliphatic and aromatic groups.
     \item Covers side-chain reactions, stability, and transmutations.
 \end{itemize}
