--- a/Notes/Week8/week8.tex
+++ b/Notes/Week8/week8.tex
@@ -277,7 +277,7 @@
     \item \marginnote{3/3:}Alcohol chemistry today.
     \item A fifth optional problem set will be posted today.
     \item Review of ways to add \ce{C-O} bonds into molecules.
-    \item \textbf{Dihydroxylation}: The treatment of an alkene with \ce{OsO4} followed by \ce{NaHSO3}, yielding a cis-1,2-diol.
+    \item \textbf{Dihydroxylation}: The treatment of an alkene with \ce{OsO4} followed by \ce{NaHSO3}, yielding a \emph{cis}-1,2-diol.
     \item \textbf{Oxidative cleavage}: The treatment of an alkene with \ce{KMnO4, OH^-, $\Delta$} followed by \ce{H3O+}, yielding a ketone.
     \item Alcohol formation.
     \begin{enumerate}
@@ -523,12 +523,12 @@
     \item \textbf{Protection}: Adding a protecting group.
     \item \textbf{Deprotection}: Removing a protecting group.
     \item \textbf{Epoxide}: A cyclic ether with a three-atom ring.
-    \item \textbf{mCPBA}: meta-Chloroperoxybenzoic acid, the peroxy acid most commonly used to create epoxides from alkenes. \emph{Structure}
+    \item \textbf{mCPBA}: \emph{meta}-Chloroperoxybenzoic acid, the peroxy acid most commonly used to create epoxides from alkenes. \emph{Structure}
     \begin{figure}[h!]
         \centering
         \footnotesize
         \chemfig{*6(-(-Cl)=-(-(=[2]O)-[:-30]O-O-[:-30]H)=-=)}
-        \caption{meta-Chloroperoxybenzoic acid (mCPBA).}
+        \caption{\emph{meta}-Chloroperoxybenzoic acid (mCPBA).}
         \label{fig:mCPBA}
     \end{figure}
     \item Creating epoxides from alkenes.
@@ -658,7 +658,7 @@
         \schemestop
     \end{center}
     \begin{itemize}
-        \item Creates a cis-diol.
+        \item Creates a \emph{cis}-diol.
     \end{itemize}
     \item Mechanism.
     \vspace{1em}
@@ -694,7 +694,7 @@
         \item Epoxides with at least one $3^\circ$ carbon.
         \begin{itemize}
             \item The S\textsubscript{N}1 mechanism will be active.
-            \item Even in this case, though, we will form a cis-product due to the steric bulk of the alcohol group hindering attacks on its face of the molecule.
+            \item Even in this case, though, we will form a \emph{cis}-product due to the steric bulk of the alcohol group hindering attacks on its face of the molecule.
         \end{itemize}
     \end{itemize}
     \item We can use the same mechanism with \ce{HCl} or \ce{HBr} instead of \ce{H2O} to yield a halohydrin with cis stereochemistry.
@@ -760,7 +760,7 @@
     \end{center}
     \begin{itemize}
         \item This reaction is not reversible under basic conditions because \ce{Cl-} is not nucleophilic enough to attack one of the epoxide carbons without the epoxide oxygen first having been protonated (by an acid).
-        \item The reactant \emph{must} be a cis-halohydrin because after the alcohol is deprotonated, it reacts with the $\alpha$-carbon through a backside attack (i.e., in an S\textsubscript{N}2 fashion).
+        \item The reactant \emph{must} be a \emph{cis}-halohydrin because after the alcohol is deprotonated, it reacts with the $\alpha$ carbon through a backside attack (i.e., in an S\textsubscript{N}2 fashion).
     \end{itemize}
 \end{itemize}
 
@@ -836,7 +836,7 @@
         \item List (in alphabetical order) both groups that are attached to the oxygen and append the word "ether."
         \item For more complicated ones, name the ether as an alkoxy substituent.
     \end{itemize}
-    \item \textbf{Replacement nomenclature}: A method of naming cyclic ethers via relating the compound in question to the correspondign hydrocarbon ring system and using the prefix oxa- to indicate that an oxygen atom replaces a \ce{CH2} group.
+    \item \textbf{Replacement nomenclature}: A method of naming cyclic ethers via relating the compound in question to the corresponding hydrocarbon ring system and using the prefix oxa- to indicate that an oxygen atom replaces a \ce{CH2} group.
     \item Cyclic ether nomenclature.
     \begin{figure}[H]
         \centering
