--- a/Notes/Week9/week9.tex
+++ b/Notes/Week9/week9.tex
@@ -248,7 +248,7 @@
         \item On Figure \ref{fig:alphaBetab}.
         \begin{itemize}
             \item When \ce{Li+} bonds to the oxygen, it creates a formal carbocation in the ring system that can be delocalized by resonance.
-            \item However, the carbocation will preferentially exist as a $3^\circ$ carbocation, so the $\alpha$-carbon is the most electrophilic site in the molecule in this case, making hydride attack there.
+            \item However, the carbocation will preferentially exist as a $3^\circ$ carbocation, so the $\alpha$ carbon is the most electrophilic site in the molecule in this case, making hydride attack there.
         \end{itemize}
     \end{itemize}
     \item Grignard reagents provide a new way to form \ce{C-C} bonds.
@@ -627,9 +627,9 @@
             \node at (6,-3) {
                 \schemestart
                     \chemfig{OH-[2](-[:-150]*5(-----))(-[2]*4(----))-[:-30]-[:30]-[:-30]-[:30]}
-                    \arrow{->[*{0.-90}\ce{POCl3}][*{0.90}\ce{Py}]}[180]
+                    \arrow{->[*{0.-90}\ce{POCl3}][*{0.90}\ce{Py}]}[180,1.1]
                     \chemfig{(=[:-150]*5(-----))(-[2]*4(----))-[:-30]-[:30]-[:-30]-[:30]}
-                    \arrow{->[*{0.-90}mCPBA]}[180]
+                    \arrow{->[*{0.-90}mCPBA]}[180,1.3]
                     \chemfig{[:-60]*3(([::180]*5(-----))-O-(-[2]*4(----))(-[:-30]-[:30]-[:-30]-[:30])-)}
                 \schemestop
             };
@@ -987,7 +987,7 @@
     \end{itemize}
     \item Primary and secondary alcohols can be reduced to carbonyl compounds, but tertiary ones cannot.
     \begin{itemize}
-        \item This is because we need a hydrogen on the $\alpha$-carbon to lose along with the hydrogen from the alcohol group.
+        \item This is because we need a hydrogen on the $\alpha$ carbon to lose along with the hydrogen from the alcohol group.
     \end{itemize}
     \item Oxidation of alcohols.
     \begin{itemize}
@@ -998,7 +998,7 @@
     \item The common mechanistic theme of alcohol oxidation by elimination.
     \begin{itemize}
         \item We attach a leaving group to the hydroxyl oxygen and deprotonate.
-        \item Attacking an $\alpha$-hydrogen subsequently causes elimination of that hydrogen and the leaving group; the hydrogen's electrons become the double bond.
+        \item Attacking an $\alpha$ hydrogen subsequently causes elimination of that hydrogen and the leaving group; the hydrogen's electrons become the double bond.
     \end{itemize}
     \item The Swern oxidation is usually carried out at low temperatures.
     \item Chromic acid (\ce{H2CrO4}) oxidation is discussed, but in a mechanistically different manner to that presented in class.
