--- a/main.bib
+++ b/main.bib
@@ -7,6 +7,14 @@
     edition      = {12th}
 }
 
+@online{bib:CHEM22000Notes,
+    author       = {Steven Labalme},
+    title        = {{CHEM 22000 (Organic Chemistry I)} Notes},
+    year         = {2022},
+    url          = {https://github.com/shadypuck/CHEM22000Notes/blob/master/Notes/notes.pdf},
+    urldate      = {2022-12-18}
+}
+
 @book{bib:Chlorobenzene-IR,
     author       = {{Coblentz Society, Inc.}},
     title        = {NIST Chemistry WebBook, NIST Standard Reference Database Number 69},
