--- a/preamble.tex
+++ b/preamble.tex
@@ -39,12 +39,12 @@
 
 \DefineBibliographyStrings{english}{bibliography={References}}
 
-\usetikzlibrary{decorations,arrows.meta,bending,calc,decorations.pathreplacing}
+\usetikzlibrary{positioning,decorations,arrows.meta,bending,calc,decorations.pathreplacing}
 \colorlet{rex}{magenta}
 \colorlet{gax}{gray!50}
 \colorlet{orx}{orange!90!yellow!95!black!90}
 \colorlet{blx}{cyan}
-\colorlet{grx}{green!60!cyan}
+\colorlet{gry}{green!60!cyan}
 
 \sisetup{range-phrase=-,range-units=single}
 \DeclareSIUnit{\angstrom}{\textup{\AA}}
